--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "apollo": "^2.34.0",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.8.0",
     "react": "^18.2.0",
