--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && node ./dist/index.js"
+    "start": "npm run compile && prettier --write 'src/*' && node ./dist/index"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,8 @@
     "apollo-server-express": "^3.12.0",
     "argon2": "^0.31.0",
     "cloudinary": "^1.40.0",
-    "graphql": "^16.8.0"
+    "graphql": "^16.8.0",
+    "prettier": "^3.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
