--- a/api/package.json
+++ b/api/package.json
@@ -18,8 +18,9 @@
     "argon2": "^0.31.0",
     "cloudinary": "^1.40.0",
     "graphql": "^16.8.0",
-    "prettier": "^3.0.3"
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
