--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.7",
+    "@mui/material": "^5.14.7",
     "apollo": "^2.34.0",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.8.0",
