--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,7 @@
     "@apollo/server": "^4.9.2",
     "@prisma/client": "^5.2.0",
     "apollo-server-express": "^3.12.0",
-    "argon2": "^0.31.0",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
     "graphql": "^16.8.0",
     "nodemon": "^3.0.1",
