--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
     "graphql": "^16.8.0",
+    "graphql-scalars": "^1.22.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "winston": "^3.10.0"
