--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,8 @@
     "cloudinary": "^1.40.0",
     "graphql": "^16.8.0",
     "graphql-scalars": "^1.22.2",
+    "graphql-type-json": "^0.3.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "winston": "^3.10.0"
