--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-swipeable-views": "^0.14.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
