--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,12 @@
     "@mui/material": "^5.14.7",
     "apollo": "^2.34.0",
     "apollo-boost": "^0.4.9",
+    "aws-sdk": "^2.1458.0",
     "graphql": "^15.8.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "react-swipeable-views": "^0.14.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
